--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -77,10 +77,10 @@ Tento přístup přináší vysokou úroveň abstrakce a zvýšenou efektivitu
 vývojářů, kteří jsou schopni automaticky provádět inspekci, generovat a upravovat
 programy~\cite{sheard2001accomplishments}.
 
-Jak již bylo zmiňováno v sekci~\ref{sec:business-rule-representation}, zachycení byzynsových
-pravidel v obecném programovacícm jazyce neposkytuje dostatečné moznosti pro jejich extrakci
+Jak již bylo zmiňováno v sekci~\ref{sec:business-rule-representation}, zachycení byznysových
+pravidel v obecném programovacím jazyce neposkytuje dostatečné možnosti pro jejich extrakci
 a sdílení. Metaprogramování však může být využito pro extrakci informací o probíhající
-byznysové operaci a jejím byzynsovém kontextu.
+byznysové operaci a jejím byznysovém kontextu.
 
 \section{Aspektově orientované programován\'{\i}}\label{sec:aop}
 
@@ -212,8 +212,8 @@ validaci vstupů formulářů v uživatelském rozhraní vůči byznysovým prav
 a automatické extrakci dokumentace~\cite{cemus2017automated}.
 
 Jednou z možných aplikací přístupu \gls{ADDA} je automatické začleňování
-byznysových pravidel do datové vrstvy \gls{EIS}\footnote{Předpokládáme standardní
-třívrstvou architekturu informačních systémů~\cite{fowler2002patterns}}.
+byznysových pravidel do datové vrstvy \gls{EIS}\footnote{Zde je předpokládána standardní
+třívrstvá architektura informačních systémů~\cite{fowler2002patterns}.}.
 Byznysová pravidla jsou nejprve popsána pomocí \gls{DSL} a následně jsou
 extrahována do jednoho bodu, ze kterého jsou automaticky distribuována.
 Pomocí specializovaného weaveru jsou pravidla překládána do podmínek
