--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -34,7 +34,7 @@ služeb.
 Pro využití frameworku musejí vývojáři zachytit byznysová pravidla ve speciálním
 \gls{DSL} a navrhnout mapování a hirearchii byznysových kontextů a byznysových operací.
 Díky tomu ale zvyšují znovupoužitelnost pravidel, ulehčují jejich centrální administraci
-a realizaci změnových požadavků. Tato počáteční investice se tedy vyplatí od určité velikosti systému,
+a realizaci změnových požadavků. Tato počáteční investice se vyplatí od určité velikosti systému,
 kdy náklady na manuální duplikaci pravidel přesáhnou cenu za návrh a využití \gls{DSL}.
 
 \section{Budouc\'{\i} rozšiřitelnost frameworku}
@@ -44,7 +44,7 @@ dále zvýší jeho schopnost znovupoužití byznysových pravidel v \gls{SOA}.
 Díky svobodné licenci \gls{MIT} může framework kdokoliv volně používat a modifikovat.
 
 \subsection{Univerzální doménově specifický jazyk}
-Zadáním této práce nebylo zkonstruovat vlastní \gls{DSL}
+Cílem této práce nebylo zkonstruovat vlastní \gls{DSL}
 k účelům automatické integrace a centrální správy byznys pravidel,
 nicméně v sekci~\ref{sec:implementation-requirements} byla potřeba takového
 jazyka identifikována. Kapitola~\ref{ch:reserse}
@@ -76,7 +76,7 @@ post-conditions do datové vrstvy transformováním jejich podmínek do výrazů
 Implementací a napojením příslušného aspect weaveru na navržený framework by byla pokryta další oblast,
 ve které může docházet k manuální duplikaci byznysových pravidel.
 
-\section{Dalš\'{\i} možnosti uplatněn\'{\i} aspektově orientovaného přístupu v SOA}
+\section{Dalš\'{\i} možnosti uplatněn\'{\i} AOP v SOA}
 
 Byznysová pravidla nejsou jediným průřezovým problémem, se kterým se systémy stavějící na \gls{SOA} musejí
 vypořádat. Jak bylo popsáno v sekci~\ref{sec:adda}, autoři přístupu \gls{ADDA} identifikují strukturu
