--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -138,20 +138,20 @@ dosažení vynikajících výsledků v průběhu magisterského studia.
 \abstractpage
 
 %Translation of Czech abstract into English.
-\noindent{Service oriented architecture decomposes information systems into small
-standalone services, lowering their complexity through loose coupling
+\noindent{Service-oriented architecture decomposes information systems into small
+standalone services lowering their complexity through loose coupling
 and component reuse. Business rules often cross-cut multiple services and
-they must be addressed consistently. Current approaches are limited when it
-comes to dealing with such tangled concerns, requiring manual restatement and
-code duplication, leading to higher development and maintenance costs.}
+must be addressed consistently. Current approaches reach their limits when it
+comes to the business rules. They tend to require manual information restatement and
+code duplication, which raises development and maintenance costs and efforts.}
 
 \vspace{\baselineskip}
 
-\noindent{This thesis analyses the problem of business rules in service oriented
+\noindent{This thesis analyses the problem of business rules in service-oriented
 architecture and proposes a novel approach that uses aspect-oriented
 programming to enable central administration and automatic integration
-of business rules in such systems. Moreover, the thesis provides a case study
-showing reduction of manual business rule duplication within an example system
+of business rules in such systems. Moreover, the thesis provides a proof of concept
+showing reduction of manual duplication of business rules within an example system
 utilizing the proposed approach.}
 
 \vspace{\baselineskip}
@@ -160,13 +160,13 @@ utilizing the proposed approach.}
 
 % Prace v cestine musi krome abstraktu v anglictine obsahovat i
 % abstrakt v cestine.
-\vglue30mm
+\vglue25mm
 
 \noindent{\LARGE \textbf{Abstrakt}}
 \vspace{\baselineskip}
 
 \noindent{Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
-systému díky členění jeho funkcionality do samostatných služeb. Díky tomu lze
+systému členěním jeho funkcionality do samostatných služeb. Díky tomu lze
 snáze oddělit zodpovědnost a zvýšit znovupoužitelnost komponent systému.
 Byznysová pravidla ale často zasahují do více služeb najednou a vyžadují
 konzistentní vykonávání. To při použití současných přístupů vede k manuální
@@ -177,8 +177,9 @@ duplikaci pravidel, která zvyšuje náklady na vývoj a údržbu systémů.}
 \noindent{Tato práce analyzuje problematiku byznysových pravidel v architektuře orientované
 na služby a navrhuje inovativní způsob, jakým lze s využitím aspektově orientovaného
 programování usnadnit práci vývojářů a administrátorů pomocí centrální správy a
-automatické integrace těchto pravidel. Součástí práce je případová studie, která
-prokazuje snížení manuální duplikace na ukázkovém systému využívajícím navržený přístup.}
+automatické integrace těchto pravidel. Součástí práce je demonstrace navrženého přístupu na
+ukázkovém příkladu, který prokazuje snížení manuální duplikace na ukázkovém systému využívajícím
+navržený přístup.}
 
 \vspace{\baselineskip}
 
