--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -23,7 +23,7 @@ Mimo jazyk Java, kter\'y byl určen zadán\'{\i}m, byla pro
 implementaci vybrána platforma jazyka \textit{Python} a platforma \textit{Node.js},
 která slouž\'{\i} jako běhové prostřed\'{\i} pro jazyk \textit{JavaScript}.
 V\'yběr byl proveden na základě aktuáln\'{\i}ch trendů ve světě softwarového
-inžen\'yrstv\'{\i}~\cite{githut, octoverse, stackoverflowsurvey}.
+inžen\'yrstv\'{\i}~\cite{octoverse, githut, stackoverflowsurvey}.
 Tyto jazyky se v posledních letech stabilně umísťují na prvních příčkách
 nejpopulárnějš\'{\i}ch programovacích jazyků pro obecné použit\'{\i}.
 
