more typos and improvements

--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -190,7 +190,7 @@ je Aspect-Driven Design Approach\footnote{Autoři historicky používali termín
 Design Approach} (AODA), který byl později změněn. Oba tyto názvy jsou vzájemně zaměnitelné.}
 (\gls{ADDA})~\cite{cemus2014aspect}. Tento přístup se zaměřuje na identifikování aspektů v informačních systémech,
 jejich separaci do \textit{single focal point} a využití weavingu pro jejich automatickou distribuci.
-K popisu aspektu přístup doporučuje využití doménově specifického jazyka (\gls{DSL}), který bude navržen na
+K popisu aspektu přístup doporučuje využití doménově specifického jazyka (\gls{DSL}), který je navržen na
 míru danému průřezovému problému.
 
 \subsection{Možnosti aplikace}
@@ -324,11 +324,11 @@ editor pro tento jazyk včetně automatického validátoru. MPS také umožňuje
 nadefinovaného jazyka do obecných programovacích jazyků, zejména pak do jazyka Java.
 Díky tomu lze nejen vytvářet libovolné \gls{DSL}, ale také rozšiřovat existující jazyky.
 
-Výhoda tohoto přístupu je vysoká úroveň abstrakce a možnost zapojit do vývoje doménové experty.
+Výhodou tohoto přístupu je vysoká úroveň abstrakce a možnost zapojit do vývoje doménové experty.
 \gls{DSL} zvyšuje expresivitu kódu a díky tomu se zmenšuje jeho objem.
 Nižší objem kódu vede ke snížení nákladů na jeho údržbu a vývoj~\cite{littman1987mental, soloway1986empirical}.
 Významnou výhodou MPS, potažmo \gls{LOP}, je nezávislost na cílové platformě.
-Nástroj MPS by umožnil snadné znovupoužití pravidel a jejich transformaci do neomezeného počtu jazyků pro
+Nástroj MPS umožňuje snadné znovupoužití pravidel a jejich transformaci do neomezeného počtu jazyků pro
 využití na mnoha platformách. Podobně jako u \gls{MDA} je však problém v dopředném
 generování -- editor MPS totiž neumožňuje načíst víceúčelový jazyk zpět do \gls{DSL}.
 
@@ -422,5 +422,5 @@ pro řešení sdílení byznysových pravidel v \gls{SOA}, a byly shrnuty jejich
 Velká část kapitoly byla věnována inovativnímu přístupu k návrhu softwarov\'ych systémů \textit{ADDA},
 ze kterého bude vycházet návrh frameworku, jež bude výstupem této práce.
 Kapitola dále shrnula rešerši stávaj\'{\i}c\'{\i}ch řešen\'{\i} správy a reprezentace byznys pravidel
-a zhodnotila jejich vhodnost pro použití v této práci. Nakonec kapitola studovala existující
-síťové architektury, které by mohly být využity pro distribuci byznysových pravidel v rámci \gls{SOA}.
+a zhodnotila jejich vhodnost pro použití v této práci. Nakonec se kapitola zabývala existujícími
+síťovými architekturami, které by mohly být využity pro distribuci byznysových pravidel v rámci \gls{SOA}.
