--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -28,7 +28,7 @@ stavějících na \gls{SOA} výrazně ušetřit náklady spojené s manuální d
 byznysových pravidel v jednotlivých službách. Tento framework je nezávislý na
 platformě a díky tomu může být využíván i v technologicky heterogenních systémech,
 jejichž služby využívají více programovacích jazyků. Ačkoliv se text této práce odkazuje
-zejména na třívrstvou architekturu, framework neklade nároky na architekturu jednotlivých
+zejména na třívrstvou architekturu, framework neklade omezení na architekturu jednotlivých
 služeb.
 
 Pro využití frameworku musejí vývojáři zachytit byznysová pravidla ve speciálním
